|Ramu| Add transaltions for instructions

--- a/locales/as.json
+++ b/locales/as.json
@@ -73,8 +73,8 @@
 	"Contribute More": "অধিক যোগদান",
 	"Share it with your friends and family": "আপোনাৰ বন্ধু আৰু পৰিয়ালৰ লগত ভগাই লওঁক",
 	"Come Back again to<br />hit your goalpost": "আপেনাৰ লক্ষ্যস্থানলৈ<br />আকৌ ঘূৰি আহিব",
-	"Please test your <b>microphone</b>": "অনুগ্ৰহ কৰি আপোনাৰ <b>মাইক্ৰফোনটো</b> পৰীক্ষা কৰি লওক",
-	"Please test your <b>speakers</b>": "অনুগ্ৰহ কৰি আপোনাৰ <b>স্পীকাৰটো</b> পৰীক্ষা কৰি লওক",
+	"Please test your <b>Microphone</b>": "অনুগ্ৰহ কৰি আপোনাৰ <b>মাইক্ৰফোনটো</b> পৰীক্ষা কৰি লওক",
+	"Please test your <b>Speakers</b>": "অনুগ্ৰহ কৰি আপোনাৰ <b>স্পীকাৰটো</b> পৰীক্ষা কৰি লওক",
 	"Ensure there is <b>no background noise</b>": "পিছফালৰ পৰা যাতে কোনো হুলস্থুল নহয় সেইটো নিশ্চিত কৰক",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "বাণীবদ্ধ কৰাৰ আগতে পাঠটো ঠিকে আছেনে নাই ডাঙৰকৈ পঢ়ি চাই লওক",
 	"Get started by clicking on <b>Record</b> button": "ৰেকৰডিং বুটামত ক্লিক কৰি আৰম্ভ কৰক",
