--- a/locales/bn.json
+++ b/locales/bn.json
@@ -100,8 +100,8 @@
 	"NEXT": "পরবর্তী",
 	"away from reaching your goal!": "আপনার লক্ষ্যে পৌঁছানো থেকে বঞ্চিত!",
 	"Recording Instructions": "রেকর্ডিং নির্দেশাবলী",
-	"Please test your <b>microphone</b>": "দয়া করে আপনার মাইক্রোফোন পরীক্ষা করুন",
-	"Please test your <b>speakers</b>": "আপনার স্পিকার পরীক্ষা করুন",
+	"Please test your <b>Microphone</b>": "দয়া করে আপনার মাইক্রোফোন পরীক্ষা করুন",
+	"Please test your <b>Speakers</b>": "আপনার স্পিকার পরীক্ষা করুন",
 	"Ensure there is <b>no background noise</b>": "নিশ্চিত করুন যে কোনও  গোলমাল নেই",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "রেকর্ডিংয়ের আগে, অনুরোধযোগ্য পাঠ্যটি জোরে জোরে পাঠ  করুন",
 	"Get started by clicking on <b>Record</b> button": "রেকর্ড বোতামে ক্লিক করে শুরু করুন",
