--- a/locales/doi.json
+++ b/locales/doi.json
@@ -75,8 +75,8 @@
 	"Contribute More": "होर जोगदान देओ",
 	"Share it with your friends and family": "इस्सी अपने दोस्तें ते परोआर च शेयर करो",
 	"Come Back again to<br />hit your goalpost": "अपना लक्ष पूरा करने आस्तै मुड़ियै आओ",
-	"Please test your <b>microphone</b>": "कृपा करियै अपना माइक्रोफोन जाची लैओ",
-	"Please test your <b>speakers</b>": "कृपा करियै अपने स्पीकर जाची लैओ",
+	"Please test your <b>Microphone</b>": "कृपा करियै अपना माइक्रोफोन जाची लैओ",
+	"Please test your <b>Speakers</b>": "कृपा करियै अपने स्पीकर जाची लैओ",
 	"Ensure there is <b>no background noise</b>": "निश्चत करी लैओ जे पिच्छें कोई रौला नेईं होऐ",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकार्डिङ शा पैह्‌लें दित्ती दी समग्री गी उच्चा-उच्चा पढ़ियै अभ्यास करी लैओ",
 	"Get started by clicking on <b>Record</b> button": "रिकार्डिङ बटन दबाइयै रिकार्डिङ शुरू करो",
