--- a/locales/gu.json
+++ b/locales/gu.json
@@ -73,8 +73,8 @@
 	"Contribute More": "વધુ ફાળો આપો",
 	"Share it with your friends and family": "તમારા મિત્રો અને કુટુંબ સાથે શેર કરો",
 	"Come Back again to<br />hit your goalpost": "તમારા લક્ષ્યને પહોંચી વળવા<br />માટે ફરીથી પાછા આવજો",
-	"Please test your <b>microphone</b>": "કૃપા કરીને તમારું <b>માઇક્રોફોન</b> ચકાસો",
-	"Please test your <b>speakers</b>": "કૃપા કરીને તમારા <b>સ્પીકર્સ</b> ચકાસો",
+	"Please test your <b>Microphone</b>": "કૃપા કરીને તમારું <b>માઇક્રોફોન</b> ચકાસો",
+	"Please test your <b>Speakers</b>": "કૃપા કરીને તમારા <b>સ્પીકર્સ</b> ચકાસો",
 	"Ensure there is <b>no background noise</b>": "ખાતરી કરો કે <b>પાછળથી કોઈ અવાજ ન આવતો</b> હોય",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "રેકોર્ડિંગ શરૂ કરતા પહેલાં સૂચવેલી ટેક્સને મોટેથી વાંચીને મહાવરો કરી લો",
 	"Get started by clicking on <b>Record</b> button": "<b>રેકોર્ડ</b> બટન પર ક્લિક કરીને શરૂ કરો",
