--- a/locales/kd.json
+++ b/locales/kd.json
@@ -82,8 +82,8 @@
 	"RE-RECORD": "परतून ध्वनिमुद्रण",
 	"NEXT": "मुखार",
 	"Recording Instructions": "ध्वनिमुद्रण सूचना",
-	"Please test your <b>microphone</b>": "तुमच्या मायक्रोफोनाची चाचणी घेयात",
-	"Please test your <b>speakers</b>": "तुमच्या स्पीकर्सची चाचणी घेयात",
+	"Please test your <b>Microphone</b>": "तुमच्या मायक्रोफोनाची चाचणी घेयात",
+	"Please test your <b>Speakers</b>": "तुमच्या स्पीकर्सची चाचणी घेयात",
 	"Ensure there is <b>no background noise</b>": "फाटल्यान बोवाळ ना हाची खात्री करून घेयात",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "व्हडल्यान वाचून ध्वनिमुद्रण",
 	"Get started by clicking on <b>Record</b> button": "ध्वनिमुद्रण बटनार क्लीक करून सूरू करात",
