--- a/locales/kr.json
+++ b/locales/kr.json
@@ -52,8 +52,8 @@
 	"RE-RECORD": "PORTUN MUDRAI",
 	"NEXT": "UPRANTLEM",
 	"Recording Instructions": "Mudravpacheo suchovnneo",
-	"Please test your <b>microphone</b>": "Tuzo microphone topas",
-	"Please test your <b>speakers</b>": "Tuje speakers topas",
+	"Please test your <b>Microphone</b>": "Tuzo microphone topas",
+	"Please test your <b>Speakers</b>": "Tuje speakers topas",
 	"Ensure there is <b>no background noise</b>": "Fattbhuimcho avaz na tachi khatri kor",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Mudravche adim,mottean vach ani suchit mozkura vixim somadhan za",
 	"Get started by clicking on <b>Record</b> button": "Record butanv klik korun suru kor",
