--- a/locales/mai.json
+++ b/locales/mai.json
@@ -39,8 +39,8 @@
 	"NEXT": "अगिला",
 	"away from reaching your goal!": "अहाँ लक्ष्यसँ दूर छी",
 	"Recording Instructions": "ध्वन्यंकनक मादे निर्देश",
-	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
+	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
 	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
 	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
