--- a/locales/ml.json
+++ b/locales/ml.json
@@ -70,8 +70,8 @@
 	"NEXT": "അടുത്തത്",
 	"away from reaching your goal!": "നിങ്ങളുടെ ലക്ഷ്യം കൈവരിക്കാൻ ഇനിയും മുന്നേറേണ്ടതുണ്ട്!!",
 	"Recording Instructions": "റെക്കോർഡിങ് നിർദ്ദേശങ്ങൾ",
-	"Please test your <b>microphone</b>": "നിങ്ങളുടെ മൈക്രോഫോൺ പരിശോധിക്കുക",
-	"Please test your <b>speakers</b>": "നിങ്ങളുടെ സ്പീക്കറുകൾ പരിശോധിക്കുക",
+	"Please test your <b>Microphone</b>": "നിങ്ങളുടെ മൈക്രോഫോൺ പരിശോധിക്കുക",
+	"Please test your <b>Speakers</b>": "നിങ്ങളുടെ സ്പീക്കറുകൾ പരിശോധിക്കുക",
 	"Ensure there is <b>no background noise</b>": "പശ്ചാത്തല ശബ്ദമൊന്നും ഇല്ലെന്ന് ഉറപ്പാക്കുക",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "റെക്കോർഡ് ചെയ്യുന്നതിന് മുൻപ്, കാണിക്കുന്ന വാക്കുകൾ ഉറക്കെ വായിച്ച് പരിചയപ്പെടുക",
 	"Get started by clicking on <b>Record</b> button": "റെക്കോർഡ് ബട്ടണിൽ ക്ലിക്ക് ചെയ്തുകൊണ്ട് ആരംഭിക്കുക",
