--- a/locales/mnibn.json
+++ b/locales/mnibn.json
@@ -88,8 +88,8 @@
 	"RE-RECORD": "অমুকহন্না রেকোর্দ তৌবীয়ু",
 	"NEXT": "মথংদা চৎপীয়ু",
 	"Recording Instructions": "রেকোর্দ তৌবগী ইনষ্ট্রক্সনশিং",
-	"Please test your <b>microphone</b>": "চানবীদুনা অদোমগী মাইক্রোফোন টেষ্ট তৌবীয়ু",
-	"Please test your <b>speakers</b>": "চানবীদুনা অদোমগী স্পিকরশিং টেষ্ট তৌবীয়ু",
+	"Please test your <b>Microphone</b>": "চানবীদুনা অদোমগী মাইক্রোফোন টেষ্ট তৌবীয়ু",
+	"Please test your <b>Speakers</b>": "চানবীদুনা অদোমগী স্পিকরশিং টেষ্ট তৌবীয়ু",
 	"Ensure there is <b>no background noise</b>": "অকোয়বদা নিন-খোংবা লৈহনবীগনু",
 	"<b>Read once</b> before recording it": "<b>Read once</b> before recording it",
 	"Get started by clicking on <b>Record</b> button": "রেকোর্দ বটন্দা ক্লিক তৌদুনা হৌবীয়ু",
