--- a/locales/mr.json
+++ b/locales/mr.json
@@ -73,8 +73,8 @@
 	"Contribute More": "अधिक योगदान द्या",
 	"Share it with your friends and family": "तो तुमचा मित्र परिवार आणि कुटुंबासह शेअर करा",
 	"Come Back again to<br />hit your goalpost": "पुन्हा या आणि तुमचे<br />उद्दिष्ट पूर्ण करा",
-	"Please test your <b>microphone</b>": "कृपया तुमच्या <b>मायक्रोफोनची</b> चाचणी करा",
-	"Please test your <b>speakers</b>": "कृपया तुमच्या <b>स्पीकर्सची</b> चाचणी घ्या",
+	"Please test your <b>Microphone</b>": "कृपया तुमच्या <b>मायक्रोफोनची</b> चाचणी करा",
+	"Please test your <b>Speakers</b>": "कृपया तुमच्या <b>स्पीकर्सची</b> चाचणी घ्या",
 	"Ensure there is <b>no background noise</b>": "<b>पार्श्वभूमीमध्ये गोंगाट नसल्याची</b> खात्री करा",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रेकॉर्ड करण्यापूर्वी, <b>मोठ्याने वाचून</b>, सूचित केलेल्या मजकूरासह सहज व्हा",
 	"Get started by clicking on <b>Record</b> button": "<b>रेकॉर्ड</b> बटणवर क्लिक करुन सुरु करा",
