--- a/locales/or.json
+++ b/locales/or.json
@@ -73,8 +73,8 @@
 	"Contribute More": "ଅଧିକ ପ୍ରଦାନ କରନ୍ତୁ",
 	"Share it with your friends and family": "ଏହାକୁ ଆପଣଙ୍କର ପରିବାର ଓ ବନ୍ଧୁଙ୍କ ସହିତ ସେୟାର କରନ୍ତୁ",
 	"Come Back again to<br />hit your goalpost": "ଆପଣଙ୍କର ଗୋଲ ପୋଷ୍ଟକୁ ହିଟ୍<br />କରିବା ପାଇଁ ପୁଣି ଥରେ ଆସନ୍ତୁ",
-	"Please test your <b>microphone</b>": "ଦୟାକରି ଆପଣଙ୍କର <b>ମାଇକ୍ରୋଫୋନକୁ</b> ଚେକ କରନ୍ତୁ",
-	"Please test your <b>speakers</b>": "ଦୟାକରି ଆପଣଙ୍କର <b>ସ୍ପିକରକୁ</b> ଚେକ କରନ୍ତୁ",
+	"Please test your <b>Microphone</b>": "ଦୟାକରି ଆପଣଙ୍କର <b>ମାଇକ୍ରୋଫୋନକୁ</b> ଚେକ କରନ୍ତୁ",
+	"Please test your <b>Speakers</b>": "ଦୟାକରି ଆପଣଙ୍କର <b>ସ୍ପିକରକୁ</b> ଚେକ କରନ୍ତୁ",
 	"Ensure there is <b>no background noise</b>": "<b>କୌଣସି ପୃଷ୍ଠଭୂମି ଶବ୍ଦ ନଥିବା</b> ସୁନିଶ୍ଚିତ କରନ୍ତୁ",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "ରେକର୍ଡ଼ିଂ ପୂର୍ବରୁ ଏହାକୁ ବଡ଼ ପାଟିରେ ପଢ଼ି ପ୍ରମ୍ପଟ ହେଉଥିବା ଟେକ୍ସଟ ସହିତ ନିଜକୁ ପରିଚିତ କରାଇ ନିଅନ୍ତୁ।",
 	"Get started by clicking on <b>Record</b> button": "<b>ରେକର୍ଡ</b> ବଟନକୁ ଚିପି ଆରମ୍ଭ କରନ୍ତୁ",
