--- a/locales/pa.json
+++ b/locales/pa.json
@@ -73,8 +73,8 @@
 	"Contribute More": "ਹੋਰ ਯੋਗਦਾਨ ਪਾਓ",
 	"Share it with your friends and family": "ਆਪਣੇ ਦੋਸਤਾਂ ਅਤੇ ਪਰਿਵਾਰ ਨਾਲ ਸਾਂਝਾ ਕਰੋ",
 	"Come Back again to<br />hit your goalpost": "ਆਪਣੇ ਟੀਚੇ ਨੂੰ ਹਾਸਲ ਕਰਨ<br />ਲਈ ਜਲਦੀ ਵਾਪਸ ਆਓ",
-	"Please test your <b>microphone</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਮਾਈਕਰੋਫ਼ੋਨ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
-	"Please test your <b>speakers</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਸਪੀਕਰਾਂ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Please test your <b>Microphone</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਮਾਈਕਰੋਫ਼ੋਨ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Please test your <b>Speakers</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਸਪੀਕਰਾਂ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Ensure there is <b>no background noise</b>": "ਪੱਕਾ ਕਰੋ ਕਿ <b>ਪਿੱਛੇ ਕੋਈ ਸ਼ੋਰ ਨਾ ਪੈਂਦਾ ਹੋਵੇ</b>",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "ਸਕ੍ਰੀਨ 'ਤੇ ਦਿਸਦੀ ਲਿਖਤ ਨੂੰ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਉੱਚੀ ਬੋਲ ਕੇ ਪੜ੍ਹੋ ਤਾਂਕਿ ਰਿਕਾਰਡ ਕਰਨਾ ਆਸਾਨ ਹੋਵੇ",
 	"Get started by clicking on <b>Record</b> button": "<b>ਰਿਕਾਰਡ ਕਰੋ</b> ਬਟਨ 'ਤੇ ਕਲਿੱਕ ਕਰਕੇ ਸ਼ੁਰੂ ਕਰੋ",
