--- a/locales/sa.json
+++ b/locales/sa.json
@@ -87,8 +87,8 @@
 	"RE-RECORD": "पुन: मुद्रणं करोतु",
 	"NEXT": "अग्रिम:",
 	"Recording Instructions": "ध्वनिमुद्रणाय सूचना:",
-	"Please test your <b>microphone</b>": "कृपया भवत: ध्वनिवर्धकं परीक्षताम्",
-	"Please test your <b>speakers</b>": "कृपया भवत: भाषकान् परीक्षताम्",
+	"Please test your <b>Microphone</b>": "कृपया भवत: ध्वनिवर्धकं परीक्षताम्",
+	"Please test your <b>Speakers</b>": "कृपया भवत: भाषकान् परीक्षताम्",
 	"Ensure there is <b>no background noise</b>": "पार्श्वभागे किंशब्दं नास्ति इति निश्चितीकरोतु",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "मुद्रणात् प्राक् उच्चैः पठित्वा संसूचित-पाठ्यं सह सुस्थितं भवतु",
 	"Get started by clicking on <b>Record</b> button": "मुद्रण-कुञ्जिकां क्लिक्-कृत्वा आरभताम्",
