--- a/locales/te.json
+++ b/locales/te.json
@@ -68,8 +68,8 @@
 	"RE-RECORD": "మళ్ళీ రికార్డ్ చెయ్యండి",
 	"NEXT": "తరువాత",
 	"Recording Instructions": "రికార్డింగ్ సూచనలు",
-	"Please test your <b>microphone</b>": "దయచేసి మీ <b>మైక్రోఫోన్</b> ని పరీక్ష చెయ్యండి",
-	"Please test your <b>speakers</b>": "దయచేసి మీ <b>స్పీకర్లను</b> పరీక్ష చెయ్యండి",
+	"Please test your <b>Microphone</b>": "దయచేసి మీ <b>మైక్రోఫోన్</b> ని పరీక్ష చెయ్యండి",
+	"Please test your <b>Speakers</b>": "దయచేసి మీ <b>స్పీకర్లను</b> పరీక్ష చెయ్యండి",
 	"Ensure there is <b>no background noise</b>": "ఎటువంటి <b>శబ్దాలు</b> లేవని నిర్ధారించుకొంది",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "ఆ పదాలతో సిద్ధం కండి, రికార్డ్ చేసే ముందు ఆ <b>పదాలను గట్టిగా</b> చదవండి",
 	"Get started by clicking on <b>Record</b> button": "<b>రికార్డ్ బటన్</b> మీద క్లిక్ చేసి సిద్ధం కండి",
