--- a/locales/ur.json
+++ b/locales/ur.json
@@ -32,8 +32,8 @@
 	"NEXT": "اگلا",
 	"away from reaching your goal!": "آپ اپنے مقصد سے بہت دور ہیں!",
 	"Recording Instructions": "ریکارڈینگ کی ہدایات",
-	"Please test your <b>microphone</b>": "براہ کرم اپنے مائیکروفون کی جانچ کریں",
-	"Please test your <b>speakers</b>": "براہ کرم اپنے اسپیکرز کی جانچ کریں",
+	"Please test your <b>Microphone</b>": "براہ کرم اپنے مائیکروفون کی جانچ کریں",
+	"Please test your <b>Speakers</b>": "براہ کرم اپنے اسپیکرز کی جانچ کریں",
 	"Ensure there is <b>no background noise</b>": "یقین کرلیں کہ پس منظرمیں کوئی شور نہیں ہے",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "ریکارڈینگ سے پہلے، الہامی متن کو بلند آواز سے پڑھ کر راحت حاصل کریں",
 	"Get started by clicking on <b>Record</b> button": "ریکارڈ بٹن کو دبا کر ریکارڈینگ شروع کریں",
