--- a/locales/en.json
+++ b/locales/en.json
@@ -39,8 +39,6 @@
 	"NEXT": "NEXT",
 	"away from reaching your goal!": "away from reaching your goal!",
 	"Recording Instructions": "Recording Instructions",
-	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
 	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
 	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
@@ -190,5 +188,9 @@
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
 	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
 	"Test mic": "Test mic",
-	"Test Speakers": "Test Speakers"
+	"Test Speakers": "Test Speakers",
+	"Quick Tips": "Quick Tips",
+	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
+	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>"
 }
