--- a/locales/hi.json
+++ b/locales/hi.json
@@ -65,8 +65,8 @@
 	"NEXT": "अगला",
 	"away from reaching your goal!": "आप अपने लक्ष्य से दूर हैं!",
 	"Recording Instructions": "रिकॉर्ड के निर्देश",
-	"Please test your <b>microphone</b>": "कृपया अपना <b>माइक्रोफोन</b> चेक करें",
-	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
+	"Please test your <b>Microphone</b>": "कृपया अपना <b>माइक्रोफोन</b> चेक करें",
+	"Please test your <b>Speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
 	"Ensure there is <b>no background noise</b>": "सुनिश्चित करें कि <b>आपके आस-पास कोई शोर-शराबा न हो</b>",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकॉर्डिंग से पहले, दिए गए <b>संदेश को पढ़कर</b> प्रैक्टिस कर लें",
 	"Get started by clicking on <b>Record</b> button": "<b>रिकॉर्ड</b> बटन को दबाकर रिकॉर्डिंग शुरू करें",
@@ -147,5 +147,10 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
-	"Feedback": "Feedback"
+	"Feedback": "Feedback",
+	"Quick Tips": "Quick Tips",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
+	"Test mic": "Test mic",
+	"Test Speakers": "Test Speakers"
 }
