--- a/locales/satdv.json
+++ b/locales/satdv.json
@@ -84,8 +84,8 @@
 	"RE-RECORD": "दोहड़ा-रेकोर्ड मे",
 	"NEXT": "इना तायोम",
 	"Recording Instructions": "रेकोर्डिंग को लाइ उदुक् ",
-	"Please test your <b>microphone</b>": "दाया काते आमाक्  <b>माइकरोफोन</b> ञेल मे ",
-	"Please test your <b>speakers</b>": "दाया काते आमाक् <b>इसपिकार</b>  ञेल मे",
+	"Please test your <b>Microphone</b>": "दाया काते आमाक्  <b>माइकरोफोन</b> ञेल मे ",
+	"Please test your <b>Speakers</b>": "दाया काते आमाक् <b>इसपिकार</b>  ञेल मे",
 	"Ensure there is <b>no background noise</b>": "निसटाय मे जे नोडे जाहांन ओनोड़ <b>साडे को बा़नुक् आ</b>",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "एमाकान ओनोल सांव आलगा ञाम मे, रेकोर्डिंग माड़ाङ, जुर <b>ते पाड़हाव दाराय ते </b>",
 	"Get started by clicking on <b>Record</b> button": "रेकोर्ड बुता़म रे ओता काते <b>एहोब</b> ञाम मे ",
