|Ramu| Modified thank you sentences

--- a/locales/en.json
+++ b/locales/en.json
@@ -192,5 +192,6 @@
 	"Quick Tips": "Quick Tips",
 	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
 	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>"
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge."
 }
