--- a/locales/te.json
+++ b/locales/te.json
@@ -129,5 +129,23 @@
 	"<b>Read once</b> before recording it": "రికార్డ్ చేసేముందు ఒకసారి చదవండి",
 	"Feedback": "Feedback",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> రికార్డింగ్లను చెల్లుబాటు చేసినందుకు ధన్యవాదాలు",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Transgender - He": "Transgender - He",
+	"Transgender - She": "Transgender - She",
+	"Rather Not Say": "Rather Not Say",
+	"Quick Tips": "Quick Tips",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
+	"Test mic": "Test mic",
+	"Test Speakers": "Test Speakers",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"You are a champion": "You are a champion",
+	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"recordings contributed": "recordings contributed",
+	"You are just 10 sentences away from earning your 1st Badge.": "You are just 10 sentences away from earning your 1st Badge.",
+	"Did you know?": "Did you know?",
+	"Most data recorded for": "Most data recorded for",
+	"Data recorded for": "Data recorded for",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
+	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge."
 }
