--- a/locales/hi.json
+++ b/locales/hi.json
@@ -150,9 +150,11 @@
 	"Feedback": "Feedback",
 	"Quick Tips": "Quick Tips",
 	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
-	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
-	"Test mic": "Test mic",
-	"Test Speakers": "Test Speakers",
+	"Test your Microphone and Speakers": "अपने माइक्रोफ़ोन और स्पीकर का परीक्षण करें",
+	"Test mic": "टेस्ट माइक",
+	"Test Speakers": "टेस्ट स्पीकर्स",
+	"Recording": "रिकॉर्डिंग",
+	"Playing": "प्लेइंग",
 	"You are a champion": "You are a champion",
 	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
 	"recordings contributed": "recordings contributed",
