--- a/locales/kn.json
+++ b/locales/kn.json
@@ -154,7 +154,9 @@
 	"Rather Not Say": "Rather Not Say",
 	"Quick Tips": "Quick Tips",
 	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
-	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
-	"Test mic": "Test mic",
-	"Test Speakers": "Test Speakers"
+	"Test your Microphone and Speakers": "ನಿಮ್ಮ ಮೈಕ್ರೊಫೋನ್ ಮತ್ತು ಧ್ವನಿವರ್ಧಕಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
+	"Test mic": "ಮೈಕ್ ಪರೀಕ್ಷಿಸಿ",
+	"Test Speakers": "ಧ್ವನಿವರ್ಧಕವನ್ನು ಪರೀಕ್ಷಿಸಿ",
+	"Recording": "ರೆಕಾರ್ಡಿಂಗ್",
+	"Playing": "ನುಡಿಸುವಿಕೆ"
 }
