--- a/locales/ta.json
+++ b/locales/ta.json
@@ -173,8 +173,8 @@
 	"seconds": "வினாடிகள்",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல இங்கே <a class=\"\" href=\"/\">என்னும் இடத்தில்</a> சொடுக்கவும்",
 	"Test your Microphone and Speakers": "உங்கள் ஒலிவாங்கி மற்றும் ஒலிபெருக்கியை  சோதிக்க",
-	"Test Mic": "ஒலிவாங்கியை சோதிக்க",
-	"Test Speaker": "ஒலிபெருக்கியை சோதிக்க",
+	"Test mic": "ஒலிவாங்கியை சோதிக்க",
+	"Test Speakers": "ஒலிபெருக்கியை சோதிக்க",
 	"Recording": "பதிவு செய்யப்படுகிறது",
 	"Playing": "வாசிக்கப்படுகிறது",
 	"Recorded": "பதிவுசெய்யப்பட்டது",
