--- a/locales/pa.json
+++ b/locales/pa.json
@@ -156,5 +156,16 @@
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ",
 	"<b>Read once</b> before recording it": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਜ਼ਰੂਰ ਪੜ੍ਹੋ",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ਬੋਲੀ ਪਛਾਣ ਤਕਨਾਲੋਜੀ \"ਮਸ਼ੀਨ ਸਿਖਲਾਈ\" ਤਕਨਾਲੋਜੀ 'ਤੇ ਨਿਰਭਰ ਕਰਦੀ ਹੈ ਜਿਸ ਲਈ ਬਹੁਤ ਵਿਸ਼ਾਲ ਮਾਤਰਾ ਵਿੱਚ ਡਾਟਾਸੈੱਟਾਂ ਦੇ ਸੰਗ੍ਰਹਿ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ, ਜਿਸ ਵਿੱਚ ਬਹੁਭਾਂਤੀ ਭਾਰਤੀ ਅਵਾਜ਼ਾਂ ਅਤੇ ਉਹਨਾਂ ਨਾਲ ਸੰਬੰਧਿਤ ਲਿਖਤਾਂ ਸ਼ਾਮਲ ਹੁੰਦੀਆਂ ਹਨ। ਵਾਕਿਆਂਸ਼ ਦੇ ਰਾਹੀਂ,ਅਸੀਂ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਬੋਲਣ ਵਾਲੀਆਂ ਭਾਰਤੀ ਅਵਾਜਾਂ ਦਾ ਇੱਕ ਵਿਭਿੰਨ ਖੁੱਲੇ ਸਰੋਤ ਦਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦਾ ਹੈ, ਜਿਸ ਨੂੰ ਇਸ ਪਹਿਲ ਲਈ ਵਰਤਿਆ ਜਾ ਸਕੇ",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>"
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
+	"Transgender - He": "Transgender - He",
+	"Transgender - She": "Transgender - She",
+	"Rather Not Say": "Rather Not Say",
+	"Feedback": "Feedback",
+	"Quick Tips": "Quick Tips",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫ਼ੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Test mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Test Speakers": "ਸਪੀਕਰ ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Recording": "ਰਿਕਾਰਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ",
+	"Playing": "ਚਲਾਇਆ ਜਾ ਰਿਹਾ ਹੈ"
 }
