|Umair|Add Punjabi language

--- a/locales/pa.json
+++ b/locales/pa.json
@@ -58,7 +58,7 @@
 	"Let's get started!": "ਆਓ ਸ਼ੁਰੂਆਤ ਕਰੀਏ!",
 	"SKIP": "ਛੱਡੋ",
 	"STOP RECORDING": "ਰਿਕਾਰਡਿੰਗ ਬੰਦ ਕਰੋ",
-	"Audio recording is too small. Please Re-record": "ਆਡੀਓ ਰਿਕਾਰਡਿੰਗ ਬਹੁਤ ਛੋਟੀ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਮੁੜ-ਰਿਕਾਰਡ ਕਰੋ",
+	"Audio recording is too small. Please Re-record": "ਆਡੀਓ ਰਿਕਾਰਡਿੰਗ ਬਹੁਤ ਜ਼ਿਆਦਾ ਛੋਟੀ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਰਿਕਾਰਡ ਕਰੋ",
 	"RE-RECORD": "ਮੁੜ-ਰਿਕਾਰਡ ਕਰੋ",
 	"NEXT": "ਅੱਗੇ",
 	"away from reaching your goal!": "ਤੁਸੀਂ ਆਪਣੇ ਟੀਚੇ 'ਤੇ ਪਹੁੰਚਣ ਤੋਂ ਇੰਨਾ ਦੂਰ ਹੋ!",
@@ -83,11 +83,11 @@
 	"Contribute your voice to create an open data repository of Indian languages": "ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਦੇ ਇੱਕ ਖੁੱਲ੍ਹੇ ਡਾਟਾ ਭੰਡਾਰ ਨੂੰ ਸਿਰਜਣ ਲਈ ਆਪਣੀ ਅਵਾਜ਼ ਦਾ ਯੋਗਦਾਨ ਪਾਓ",
 	"Listen": "ਸੁਣੋ",
 	"Verify What They Say": "ਉਹਨਾਂ ਦੇ ਬੋਲਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
-	"Help us by validating the voice samples that others have contributed": "ਹੋਰਾਂ ਵੱਲੋਂ ਯੋਗਦਾਨ ਕੀਤੇ ਅਵਾਜ਼ ਦੇ ਨਮੂਨਿਆਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਸਾਡੀ ਮਦਦ ਕਰੋ",
+	"Help us by validating the voice samples that others have contributed": "ਹੋਰ ਵੱਲੋਂ ਯੋਗਦਾਨ ਪਾਏ ਗਏ ਅਵਾਜ਼ੀ ਨਮੂਨਿਆਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਸਾਡੀ ਮਦਦ ਕਰੋ",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "ਆਪਣੀ ਤਰਜੀਹੀ ਭਾਸ਼ਾ ਚੁਣੋ",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
-	"languages contributed": "ਯੋਗਦਾਨ ਕੀਤੀਆਂ ਗਈਆਂ ਭਾਸ਼ਾਵਾਂ",
+	"languages contributed": "ਯੋਗਦਾਨ ਕੀਤੀਆਂ ਭਾਸ਼ਾਵਾਂ",
 	"hours recorded": "ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ ਘੰਟੇ",
 	"Select the language for contribution": "ਉਹ ਭਾਸ਼ਾ ਚੁਣੋ ਜਿਸ ਵਿੱਚ ਤੁਸੀਂ ਯੋਗਦਾਨ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "ਵਾਕਿਆਂਸ਼: ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਲਈ ਇੱਕ ਕਰਾਊਡਸੋਰਸਿੰਗ ਪਹਿਲ",
@@ -117,32 +117,32 @@
 	"Would you also like to contribute your voice?": "ਕੀ ਤੁਸੀਂ ਆਪਣੀ ਅਵਾਜ਼ ਅਤੇ ਸ਼ਬਦਾਂ ਰਾਹੀਂ ਵੀ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੋਗੇ?",
 	"Start Contributing": "ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ",
 	"Thank you for validating!": "ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ਤੁਸੀਂ ਸਾਡੀ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਸਹਾਇਤਾ ਕੀਤੀ ਹੈ",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ਤੁਸੀਂ ਸਾਨੂੰ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕੀਤੀ",
 	"Validate More": "ਹੋਰ ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
 	"Validating Instructions": "ਪ੍ਰਮਾਣੀਕਰਨ ਸੰਬੰਧੀ ਹਿਦਾਇਤਾਂ",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"If you are unsure of the match, skip the particular voice sample": "ਜੇਕਰ ਤੁਹਾਨੂੰ ਮਿਲਾਨ ਬਾਰੇ ਪੱਕਾ ਪਤਾ ਨਹੀਂ ਹੈ, ਤਾਂ ਇਸ ਖਾਸ ਅਵਾਜ਼ੀ ਨਮੂਨੇ ਨੂੰ ਛੱਡੋ",
 	"Select the language": "ਇੱਕ ਭਾਸ਼ਾ ਚੁਣੋ",
 	"All Languages": "ਸਾਰੀਆਂ ਭਾਸ਼ਾਵਾਂ",
-	"We do not have any data for this language, would you like to contribute for it?": "ਸਾਡੇ ਕੋਲ ਇਸ ਭਾਸ਼ਾ ਲਈ ਕੋਈ ਡੇਟਾ ਨਹੀਂ ਹੈ, ਕੀ ਤੁਸੀਂ ਇਸਦੇ ਲਈ ਯੋਗਦਾਨ ਦੇਣਾ ਚਾਹੋਗੇ?",
-	"Contribute Now": "ਹੁਣ ਯੋਗਦਾਨ ਦਿਓ",
-	"hours validated": "ਘੰਟੇ ਪ੍ਰਮਾਣਿਤ",
+	"We do not have any data for this language, would you like to contribute for it?": "ਸਾਡੇ ਕੋਲ ਇਸ ਭਾਸ਼ਾ ਲਈ ਕੋਈ ਡਾਟਾ ਨਹੀਂ ਹੈ, ਕੀ ਤੁਸੀਂ ਇਸ ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੋਗੇ?",
+	"Contribute Now": "ਹੁਣੇ ਯੋਗਦਾਨ ਪਾਓ",
+	"hours validated": "ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਘੰਟੇ",
 	"Progress Chart": "ਪ੍ਰਗਤੀ ਸਮਾਂ-ਰੇਖਾ",
-	"Monthly": "ਮਾਸਿਕ",
+	"Monthly": "ਮਹੀਨਾਵਾਰ",
 	"Quarterly": "ਤਿਮਾਹੀ",
 	"Gender Contribution": "ਲਿੰਗ ਮੁਤਾਬਕ ਯੋਗਦਾਨ",
 	"State Wise distribution": "ਰਾਜ ਮੁਤਾਬਕ ਵੰਡ",
 	"Age Group Distribution": "ਉਮਰ ਸਮੂਹ ਮੁਤਾਬਕ ਵੰਡ",
-	"Oops": "ਓਹ ਹੋ",
+	"Oops": "ਓਹੋ",
 	"Page Not Found": "ਪੰਨਾ ਨਹੀਂ ਮਿਲਿਆ",
 	"Looks like you have taken a wrong turn here": "ਲੱਗਦਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕਿਸੇ ਗਲਤ ਥਾਂ 'ਤੇ ਆ ਗਏ ਹੋ",
 	"Click Here": "ਕਲਿਕ ਕਰੋ",
 	"to go back to home page": "ਹੋਮ ਪੇਜ ਤੇ ਵਾਪਸ ਜਾਣ ਲਈ ਇੱਥੇ",
 	"hrs recorded in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ",
 	"hrs validated in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਗਏ",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ਰਿਕਾਰਡਿੰਗ ਆਪਣੇ ਆਪ <span id=\"counter\"></span> ਸੈਕਿੰਡ ਬਾਅਦ ਬੰਦ ਹੋ ਜਾਵੇਗੀ",
-	"Incorrect": "ਗਲਤ",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ਰਿਕਾਰਡਿੰਗ <span id=\"counter\"></span>  ਸਕਿੰਟਾਂ ਬਾਅਦ ਸਵੈਚਲਿਤ ਤੌਰ 'ਤੇ ਬੰਦ ਹੋ ਜਾਵੇਗੀ",
+	"Incorrect": "ਗ਼ਲਤ",
 	"Replay": "ਮੁੜ-ਚਲਾਓ",
 	"Pause": "ਰੋਕੋ",
 	"Correct": "ਸਹੀ",
@@ -152,9 +152,9 @@
 	"seconds": "ਸਕਿੰਟ",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ਹੋਮ ਪੰਨੇ 'ਤੇ ਜਾਣ ਲਈ <a class=\"\" href=\"/\">'ਤੇ ਕਲਿੱਕ ਕਰੋ</a>",
 	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ਇੱਕ ਟੀਮ ਵਜੋਂ, ਅਸੀਂ ਤੁਹਾਨੂੰ ਸਾਡੇ ਨਾਲ ਜੁੜਨ ਲਈ ਅਤੇ ਇਸ ਪਹਿਲ ਵਿੱਚ ਆਪਣੀ ਆਵਾਜ਼ ਦਾ ਯੋਗਦਾਨ ਪਾਉਣ ਲਈ ਸੱਦਾ ਦੇ ਰਹੇ ਹਾਂ। ਇੱਕੋ ਵਾਰ ਵਿੱਚ ਆਪਣੀ ਅਵਾਜ਼ ਨੂੰ ਰਿਕਾਰਡ ਕਰਨਾ ਥੋੜ੍ਹਾ ਔਖਾ ਕੰਮ ਹੋ ਸਕਦਾ ਹੈ ਅਤੇ ਇਸੇ ਕਰਕੇ, ਅਸੀਂ ਆਪਣੀ ਵੈੱਬਸਾਈਟ 'ਤੇ ਸੌਖੇ ਉਪਾਅ ਬਣਾਏ ਹਨ, ਜਿੱਥੇ ਤੁਸੀਂ ਇੱਕ ਤੋਂ ਬਾਅਦ ਦੁਬਾਰਾ ਕਈ ਵਾਰੀ ਜਾ ਕੇ ਪਿਛਲੀ ਵਾਰ ਜਿੱਥੋਂ ਛੱਡਿਆ ਸੀ, ਓੱਥੋਂ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰ ਸਕਦੇ ਹੋ।",
-	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "ਤੁਸੀਂ ਆਪਣੀ ਅਵਾਜ਼ ਦੀਆਂ <b><span id=\"user-contribution\"></span></b><b><span></span></b> ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ ਹੈ",
+	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "ਤੁਸੀਂ ਆਪਣੀ ਅਵਾਜ਼ ਦੀਆਂ <b><span id=\"user-contribution\"></span></b><b><span></span></b> ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ",
-	"<b>Read once</b> before recording it": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਜ਼ਰੂਰ ਪੜ੍ਹੋ",
+	"<b>Read once</b> before recording it": "ਇਸ ਨੂੰ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਪੜ੍ਹ ਲਵੋ",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ਬੋਲੀ ਪਛਾਣ ਤਕਨਾਲੋਜੀ \"ਮਸ਼ੀਨ ਸਿਖਲਾਈ\" ਤਕਨਾਲੋਜੀ 'ਤੇ ਨਿਰਭਰ ਕਰਦੀ ਹੈ ਜਿਸ ਲਈ ਬਹੁਤ ਵਿਸ਼ਾਲ ਮਾਤਰਾ ਵਿੱਚ ਡਾਟਾਸੈੱਟਾਂ ਦੇ ਸੰਗ੍ਰਹਿ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ, ਜਿਸ ਵਿੱਚ ਬਹੁਭਾਂਤੀ ਭਾਰਤੀ ਅਵਾਜ਼ਾਂ ਅਤੇ ਉਹਨਾਂ ਨਾਲ ਸੰਬੰਧਿਤ ਲਿਖਤਾਂ ਸ਼ਾਮਲ ਹੁੰਦੀਆਂ ਹਨ। ਵਾਕਿਆਂਸ਼ ਦੇ ਰਾਹੀਂ,ਅਸੀਂ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਬੋਲਣ ਵਾਲੀਆਂ ਭਾਰਤੀ ਅਵਾਜਾਂ ਦਾ ਇੱਕ ਵਿਭਿੰਨ ਖੁੱਲੇ ਸਰੋਤ ਦਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦਾ ਹੈ, ਜਿਸ ਨੂੰ ਇਸ ਪਹਿਲ ਲਈ ਵਰਤਿਆ ਜਾ ਸਕੇ",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
 	"Transgender - He": "Transgender - He",
@@ -167,5 +167,30 @@
 	"Test mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Speakers": "ਸਪੀਕਰ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Recording": "ਰਿਕਾਰਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ",
-	"Playing": "ਚਲਾਇਆ ਜਾ ਰਿਹਾ ਹੈ"
+	"Playing": "ਚਲਾਇਆ ਜਾ ਰਿਹਾ ਹੈ",
+	"More Languages":"ਹੋਰ ਭਾਸ਼ਾਵਾਂ",
+	"Other Languages":"ਦੂਜੀਆਂ ਭਾਸ਼ਾਵਾਂ",
+	"Get comfortable with the text before recording":"ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਲਿਖਤ ਨੂੰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਪੜ੍ਹ ਅਤੇ ਸਮਝ ਲਓ",
+	"WooHoo!! You took the first important step":"ਬੱਲੇ! ਤੁਸੀਂ ਪਹਿਲਾ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਕਦਮ ਚੁੱਕਿਆ",
+	"'x' Recordings contributed":"\"x\" ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ",
+	"You are just 'x' sentences away from earning the Bronze Badge.":"ਤੁਸੀਂ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are just 'x' sentences away from earning the Silver Badge.":"ਤੁਸੀਂ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are just 'x' sentences away from earning the Gold Badge.":"ਤੁਸੀਂ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are just 'x' sentences away from earning the Platinum Badge.":"ਤੁਸੀਂ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are a champion":"ਤੁਸੀਂ ਵਿਜੇਤਾ ਹੋ",
+	"Bronze":"ਬਰੌਨਜ਼",
+	"Silver":"ਸਿਲਵਰ",
+	"Gold":"ਗੋਲਡ",
+	"Platinum":"ਪਲੈਟੀਨਮ",
+	"Download":"ਡਾਊਨਲੋਡ ਕਰੋ",
+	"You are on a spree!":"ਮੈਂ ਕਿਹਾ ਜੀ ਕਮਾਲ ਹੀ ਕਮਾਲ!",
+	"You are driving the spirit of your language":"ਤੁਸੀਂ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਿਖਰ ਤੱਕ ਲਿਜਾ ਰਹੇ ਹੋ",
+	"Woaah! You've earned your Bronze badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"Woaah! You've earned your Silver badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"Woaah! You've earned your Gold badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"Woaah! You've earned your Platinum badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"We love your spirit when you take the charge":"ਅਸੀਂ ਤੁਹਾਡੇ ਕੰਮ ਕਰਨ ਦੇ ਤਰੀਕੇ ਦੇ ਦੀਵਾਨੇ ਹਾਂ",
+	"You are in control, lead the way":"ਕਮਾਨ ਤੁਹਾਡੇ ਹੱਥ ਵਿੱਚ ਹੈ, ਸਾਡੀ ਅਗਵਾਈ ਕਰੋ",
+	"Spread the word. Share it with your friends and family.": "ਇਸ ਬਾਰੇ ਸਭ ਨੂੰ ਦੱਸੋ। ਆਪਣੇ ਦੋਸਤਾਂ ਅਤੇ ਪਰਿਵਾਰ ਨਾਲ ਇਸ ਨੂੰ ਸਾਂਝਾ ਕਰੋ।",
+	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great lingusitic applications. Our <x> language ranks <y> on boloindia. Do your bit and empower the language?": "ਮੈਂ https://boloindia.nplt.in 'ਤੇ ਭਾਰਤ ਲਈ ਭਾਸ਼ਾਵਾਂ ਦੇ ਖੁੱਲੇ ਸਰੋਤ ਦੇ ਭੰਡਾਰ ਨੂੰ ਬਣਾਉਣ ਵਿੱਚ ਆਪਣਾ ਯੋਗਦਾਨ ਪਾਇਆ। ਮੈਂ ਅਤੇ ਤੁਸੀਂ ਆਪਣੀਆਂ ਅਵਾਜ਼ਾਂ ਦਾ ਯੋਗਦਾਨ ਕਰਕੇ ਮਸ਼ੀਨਾਂ ਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਸਿੱਖਣ ਅਤੇ ਬਿਹਤਰੀਨ ਭਾਸ਼ਾਈ ਐਪਲੀਕੇਸ਼ਨਾਂ ਰਾਹੀਂ ਸਾਡੇ ਨਾਲ ਗੱਲਬਾਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ। ਸਾਡੀ <x> ਭਾਸ਼ਾ boloindia 'ਤੇ <y> ਦਰਜੇ 'ਤੇ ਹੈ। ਕੀ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾ ਕੇ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਸ਼ਕਤ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?"
 }
